k8s/project/notes-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-ui
  namespace: notes
  labels:
    app: notes-ui
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: notes-ui
