k8s/project/notes-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-ingress
  namespace: notes
spec:
  ingressClassName: nginx
  rules:
    - host: notes.host
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: notes-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes-ui
                port:
                  number: 80
